--- a/kino-api/Cargo.toml
+++ b/kino-api/Cargo.toml
@@ -10,3 +10,5 @@ chrono = { version = "0.4.31", features = ["serde"] }
 diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
 dotenvy = "0.15.7"
 rocket = { version = "0.5.0", features = ["json"] }
+serde = { version = "1.0.193", features = ["derive"] }
+serde_json = "1.0.108"
