--- a/kino-api/Cargo.toml
+++ b/kino-api/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 chrono = { version = "0.4.31", features = ["serde"] }
 diesel = { version = "2.1.4", features = ["postgres", "chrono"] }
 dotenvy = "0.15.7"
+reqwest = { version = "0.11.23", features = ["json"] }
 rocket = { version = "0.5.0", features = ["json"] }
+rocket_cors = "0.6.0"
 serde = { version = "1.0.193", features = ["derive"] }
 serde_json = "1.0.108"
